# repetitive-neural-nonsense

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README  README.md  REPORT.md  data-merge.sh  docker-compose.yml  pyproject.toml  run.sh  upload.sh
0-ebnerd-benchmark/: dataset_ebnerd.ipynb
1-ebrec-baseline/: dataset_ebnerd.ipynb  nrms_ebnerd.ipynb
2-gru/: data_exploration.ipynb
2-recommenders-gru/: benchmark_utils.py  movielens.ipynb
2-recommenders-gru/recommenders-template/: base_model.py  gru.py
data/: merged.tar.gz.md5
docs/: assignment.md
ebnerd-benchmark-repository/: pyproject.toml
src/: 0_data_exploration.ipynb  1_ebnerd_nrms.ipynb  1_ebnerd_quickstart.ipynb  2_ebnerd_lstur.ipynb  2_ebnerd_lstur.py  2_ebnerd_nrms.ipynb  2_ebnerd_nrms.py  3_ebnerd_gru.py  3_ebnerd_lstur.ipynb  3_ebnerd_naml.ipynb  3_ebnerd_npa.ipynb  3_ebnerd_npa.py  3_ebnerd_nrms_v2.ipynb  3_gru.py  4_ebnerd_lstur.ipynb  data_exploration.ipynb  dataset_ebnerd.ipynb  ebnerd_constants.py  ebnerd_naml.py  gru.ipynb  lstur_dummy.py  mnist.py  naml_dummy.py  nn.ipynb  nn.py  nn_clothes.ipynb  nn_clothes.py  nn_mnist.py  nn_v2.py  npa_dummy.py  nrms_docvec_dummy.py  nrms_dummy.py  nrms_ebnerd.ipynb  rnn.ipynb  rnn.py  rnn_classification.ipynb  test.py  test_import.py  tinkering.ipynb
src/ebnerd_benchmark_lib/: dataset_ebnerd.ipynb  nrms_ebnerd.ipynb
src/quickstart/: dataset_ebnerd.ipynb  nrms_ebnerd.ipynb
src/recommenders_lib/: deeprec_utils.py  lstur_MIND.ipynb  sequential_base_model.py
submissions/: ebnerd_lstur.txt  ebnerd_nrms.txt
(+14 files in other folders)
